--- a/sri.html
+++ b/sri.html
@@ -100,12 +100,12 @@
             <p class="align-center">
               The first view is a 3 chart dashboard comprising two pie charts
               and a bar chart. The first pie chart displays the Host Team based
-              on Host City. The bar chart shows the top n (usually 20 but some
+              on Host City. The bar chart shows the top N (usually 20 but some
               sports have less than 20 teams competing) teams for a given sport.
               We can then click on the bars to see a breakdown of medal
               distribution for the selected Team. We can then compare
               distribution and medal counts between the Host Team and other
-              Non-Host Teams and if they rank in the top n teams for that sport.
+              Non-Host Teams and if they rank in the top N teams for that sport.
             </p>
             <div class="iframe-container">
               <iframe
@@ -290,7 +290,7 @@
                 the research question due to its interactivity and side by side
                 chart views. For a given city, we are always able to see the
                 host team medal distribution for a given sport (if it exists).
-                Beside this, we see the next n top performing counties which
+                Beside this, we see the next N top performing counties which
                 allows us to visually compare how the host team is fairing when
                 compared to others. We even get to dive into more detail if we
                 want to compare the host team with another team in particular
