final website commit

--- a/briana.html
+++ b/briana.html
@@ -111,7 +111,12 @@
               are shown in the scatter plot
             </p>
             <div class="iframe-container">
-              <iframe></iframe>
+              <iframe
+                src="charts/briana/q1_viz.html"
+                frameborder="0"
+                width="1600"
+                height="1100"
+              ></iframe>
             </div>
             <p class="align-center">
               The second view consists of a faceted histogram and a faceted line
@@ -121,7 +126,12 @@
               how the success of the age groups have changed over time
             </p>
             <div class="iframe-container">
-              <iframe></iframe>
+              <iframe
+                src="charts/briana/q2_viz.html"
+                frameborder="0"
+                width="1350"
+                height="800"
+              ></iframe>
             </div>
             <p class="align-center">
               This third view is a heatmap that displays the difference in
@@ -133,7 +143,12 @@
               the female versus male athletes.
             </p>
             <div class="iframe-container">
-              <iframe></iframe>
+              <iframe
+                src="charts/briana/q3_viz.html"
+                frameborder="0"
+                width="1000"
+                height="1000"
+              ></iframe>
             </div>
           </div>
         </div>
@@ -423,6 +438,7 @@
                 this), and it might be useful to know, we have included this
                 information in the tooltip.
               </li>
+              <br />
               <li>
                 <strong>Interactivity:</strong> The interactivity of this map is
                 mainly in the dropdown menu which allows the user to select
@@ -432,6 +448,7 @@
                 explore the data without a real purpose, as well as those who
                 want to investigate the details of a season, for example.
               </li>
+              <br />
               <li>
                 <strong>Critique:</strong> This map is highly effective for
                 answering the research question as it allows us to see all the
