--- a/adwait.html
+++ b/adwait.html
@@ -56,7 +56,7 @@
               The visualizations below explore the performance of countries in
               the Summer and Winter Olympic Games from 1896 to 2016. The data is
               visualized using heatmaps, faceted bar charts, line chart
-              matrices, and area density charts to analyze individual natinal
+              matrices, and area density charts to analyze individual national
               performance and dominance of countries in different events over
               time. The visualizations are interactive and allow users to
               explore the data by selecting specific countries, years, and
