--- a/arushi.html
+++ b/arushi.html
@@ -102,7 +102,7 @@
               These bidirectionally linked line charts show the participation
               trends in the top 5 sports by NOC and their associated top 3
               events. The user can select the sport using the drop-down below
-              and analyse the trends in both the plots. They are vertically
+              and analyse the trends in both the plots. They are horizontally
               connected, making a view that allows easy comparison. Also, the
               bidirectional linking allows users to explore connections between
               sports and their events, ensuring deeper insights into
@@ -111,8 +111,8 @@
             <div class="iframe-container">
               <iframe
                 src="charts/arushi/final_chart.html"
-                width="1200"
-                height="1200"
+                width="1330"
+                height="630"
                 frameborder="0"
               ></iframe>
             </div>
